# arvc-umh-ros

./: README.md  dtg-slam docs.docx
ARVC_ar_pose/: manifest.xml
ARVC_ar_pose/data/: object_4x4
ARVC_ar_pose/include/ARVC_ar_pose/: ar_multi.h
ARVC_ar_pose/launch/: ar_multi.launch  ar_multi_orig.launch  multirobot.launch
ARVC_ar_pose/src/: ar_multi.cpp  ar_single.cpp  object.cpp
behaviour_based_local_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
behaviour_based_local_planner/include/behaviour_based_local_planner/: behaviour_based_local_planner.h  localPotentialField.h  reactive.h  reactiveGauss.h
behaviour_based_local_planner/src/: behaviour_based_local_planner.cpp  localPotentialField.cpp  main.cpp  reactive.cpp  reactiveGauss.cpp
behaviour_based_local_planner/srv/: SetGateway.srv
carmen_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml  map.yaml
carmen_publisher/launch/: gmapping.launch
carmen_publisher/src/: carmen_publisher.cpp  ground_truth_log.cpp
convex_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml
convex_segmentation/include/convex_segmentation/: convex_segmentation.h
convex_segmentation/launch/: single_test.launch
convex_segmentation/src/: convex_segmentation.cpp  main.cpp
explore_test/: manifest.xml  rviz_config.rviz
explore_test/launch/: multi_test.launch  single_test.launch  single_test_teleop.launch
explore_test/world/: map1.pgm  map1.world  map2.pgm  map3.pgm  map4.pgm  map4.world  map4.yaml  map5.world  map6.pgm  map6.world  map6.yaml  map7.pgm  willow-erratic-dynamic.world
explore_tree_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
explore_tree_planner/include/explore_tree_planner/: explore_tree_planner.h  treeNode.h
explore_tree_planner/src/: explore_tree_planner.cpp  main.cpp  treeNode.cpp
graph_optimizer_slam/: CMakeLists.txt  gnu_plot command  mainpage.dox  manifest.xml  plot.gnu
graph_optimizer_slam/include/graph_optimizer_slam/: global_graph.h  graph_optimizer_slam.h
graph_optimizer_slam/launch/: single_test.launch  single_test_bag.launch  single_test_intel_log.launch
graph_optimizer_slam/src/: global_graph.cpp  graph_optimizer_slam.cpp  main.cpp
gridmap_description_tools/: CMakeLists.txt  mainpage.dox  manifest.xml
gridmap_description_tools/include/gridmap_description_tools/: gridmap_description_tools.h
gridmap_description_tools/src/: gridmap_description_tools.cpp
iuro_people_finder/: stack.xml
iuro_people_finder/ARVC_libs/: CMakeLists.txt  mainpage.dox  manifest.xml
iuro_people_finder/ARVC_libs/include/: ConfigFile.h  OGMReflectProb.h  OGMros.h  binMap.h  gridMapInterface.h  matFuns.h  occupancyGridMap.h  rangeSensorData.h  robotTypes.h
iuro_people_finder/ARVC_libs/src/: OGMReflectProb.cpp  OGMros.cpp  binMap.cpp  matFuns.cpp  occupancyGridMap.cpp
iuro_people_finder/iuro_active_people_search/: CMakeLists.txt  manifest.xml
iuro_people_finder/iuro_active_people_search/include/iuro_active_people_search/: treeNode.h  (+1 more)
iuro_people_finder/iuro_active_people_search/src/: active_people_search.cpp  main.cpp  treeNode.cpp
iuro_people_finder/iuro_fake_people_detector/: CMakeLists.txt  mainpage.dox  manifest.xml
iuro_people_finder/iuro_fake_people_detector/msg/: person_detected.msg  tracked_people.msg
iuro_people_finder/iuro_fake_people_detector/src/: main.cpp
iuro_people_finder/iuro_people_finder_mapper/: CMakeLists.txt  mainpage.dox  manifest.xml
iuro_people_finder/iuro_people_finder_mapper/action/: reset.action
iuro_people_finder/iuro_people_finder_mapper/msg/: people_finder_map.msg
iuro_people_finder/iuro_people_finder_mapper/src/: main.cpp  people_finder_mapper.cpp
iuro_people_finder/iuro_people_finder_mapper/srv/: get_people_finder_map.srv
iuro_people_finder/iuro_people_finder_test/: mainpage.dox  manifest.xml
iuro_people_finder/iuro_people_finder_test/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz.vcg
iuro_people_finder/iuro_people_finder_test/launch/: bag1.bag  bag2.bag  global.bag  multistage.launch  people_finder_test.launch
iuro_people_finder/iuro_people_finder_test/world/: map0.pgm  map1.pgm  map5.pgm  map6.pgm  map6.world
iuro_people_finder/iuro_person_movement_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
iuro_people_finder/iuro_person_movement_planner/src/: main.cpp  person_movement_planner.cpp
map_fusion/: CMakeLists.txt  manifest.xml
map_fusion/include/map_fusion/: map_fusion.h
map_fusion/newmaps/: map.pgm  map0.pgm  map0.yaml  map1.yaml  map_fused.yaml
map_fusion/src/: main.cpp  map_fusion.cpp
maps/: map.pgm
matlib/: CMakeLists.txt  manifest.xml
matlib/include/: OGMReflectProb.h  OGMros.h  binMap.h  gridMapInterface.h  matFuns.h  occupancyGridMap.h  robotTypes.h
matlib/src/: OGMReflectProb.cpp  OGMros.cpp  binMap.cpp  matFuns.cpp  occupancyGridMap.cpp
multirobot_EKF/: CMakeLists.txt  log.txt  log2.txt  mainpage.dox  manifest.xml
multirobot_EKF/include/multirobot_EKF/: EKF_SLAM.h  ekf_ros.h
multirobot_EKF/launch/: ekf.launch  multirobot.launch
multirobot_EKF/src/: EKF_SLAM.cpp  ekf_ros.cpp  main.cpp
toro/: CMakeLists.txt  mainpage.dox  manifest.xml
(+2 files in other folders)
